# ssg-quarto-python-setup

./: README.md  pyproject.toml
docs/: about.html  finalsteps.html  goal.html  index.html  poetry.html  prework.html  pyenv.html  quarto.html  references.html  search.json  software.html  terminals.html  tools.html  utils.html  vscode.html
docs/site_libs/bootstrap/: bootstrap.min.css
src/: _quarto.yml  finalsteps.qmd  goal.qmd  index.qmd  poetry.qmd  prework.qmd  pyenv.qmd  quarto.qmd  references.qmd  software.qmd  terminals.qmd  vscode.qmd
websrc/: _quarto.yml  finalsteps.qmd  index.qmd  prework.qmd  software.qmd  terminals.qmd  utils.qmd  vscode.qmd
