[tool.poetry]
name = "ssg-quarto-python-setup"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
jupyter = "^1.0.0"


##[tool.poetry.scripts]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
